# Package-Management-Ref

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
docs/: generate-readme.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
workspace/: buildandrun.sh  buildandtest.sh
